--- a/counter.html
+++ b/counter.html
@@ -1,21 +1,19 @@
 <!-- html comment -->
 <div id="counter">0</div>
-<input type="button" value="Click Me" id="btnClick" />
+<input type="button" value="Click Me" id="btnClick" onclick="handleClick()" />
 <script>
     var count = 0;
-    var a = 10;
-    var b = 20;
-    console.log(a + '+' + b + '=' + (a + b));//string concate
-    console.log(`${a}+${b}=${a + b}`);//string interpolation
-    console.log(`${a}-${b}=${a - b}`);//string interpolation
-    console.log(`${a}*${b}=${a * b}`);//string interpolation
-    console.log(`${a}/${b}=${a / b}`);//string interpolation
-    console.log(`${a}%${b}=${a % b}`);//string interpolation
 
-    //single line comment
-    /*
-    multiline comment
-    */
+    function handleClick() {
+        count++;
+        var tmp = document.getElementById("counter").innerText;
+        document.getElementById("counter").innerHTML = '<b>"hi"' + count + "</b>'there' xyz's room";
+        console.log(tmp);
+
+        // ++count;
+        console.log('button clicked', count);
+
+    }
 
     console.log(count);
 
