--- a/quiz_app.html
+++ b/quiz_app.html
@@ -1,22 +1,87 @@
 <body>
     <div class="question_count">
         Question
-        <span id="curr_count">1</span>
+        <span id="curr_count">0</span>
         /
         <span id="total_count">5</span>
     </div>
-    <div class="question">
+    <div id="score">0</div>
+    <div id="question_text">
         Question text available here
     </div>
     <div id="options">
-        <input type="radio" name="opt" id="opt1" />Option 1<br />
-        <input type="radio" name="opt" id="opt2" />Option 2<br />
-        <input type="radio" name="opt" id="opt3" />Option 3<br />
-        <input type="radio" name="opt" id="opt4" />Option 4<br />
+
     </div>
     <div class="buttons_div">
-        <input type="button" id="btnPrev" value="Previous" />
-        <input type="button" id="btnNext" value="Next" />
+        <input type="button" id="btnPrev" onclick="prev()" value="Previous" />
+        <input type="button" id="btnNext" onclick="next()" value="Next" />
     </div>
+    <script>
+        var questions = [
+            {
+                "id": 1,
+                "ques_text": "First Question",
+                "opt_1": "q1op1",
+                "opt_2": "q1op2",
+                "opt_3": "q1op3",
+                "opt_4": "q1op4",
+                "correct_option": "opt_4",
+                "status": true
+            }, {
+                "id": 10,
+                "ques_text": "Second Question",
+                "opt_1": "q2op1",
+                "opt_2": "q2op2",
+                "opt_3": "q2op3",
+                "opt_4": "q2op4",
+                "correct_option": "opt_2",
+                "status": true
+            }
+        ];
+        var currQuestion = 1;
+        var score = 0;
+        function next() {
+            console.log("correct answer", questions[currQuestion - 1].correct_option);
+            // console.log("selected answer", document.getElementsByName('opt'));
+            let ele = document.getElementsByName('opt');
+            for (i = 0; i < ele.length; i++) {
+                if (ele[i].checked)
+                // document.getElementById("result")
+                //     .innerHTML="Selected color: " + ele[i].value;
+                {
+                    console.log(ele[i].value);
+                    if (ele[i].value == questions[currQuestion - 1].correct_option) {
+                        score += 5;
+                    }
+                }
 
+            }
+
+            if (currQuestion < questions.length) {
+                currQuestion++;
+
+            }
+            displayData();
+
+        }
+        function prev() {
+            if (currQuestion > 0) {
+                currQuestion--;
+                displayData();
+            }
+        }
+        function displayData() {
+            document.getElementById("question_text").innerHTML = questions[currQuestion - 1].ques_text;
+            document.getElementById("curr_count").innerHTML = currQuestion;
+            document.getElementById("total_count").innerHTML = questions.length;
+            document.getElementById("score").innerHTML = score;
+            var opt =
+                '<input type="radio" name="opt" id="opt_1" value="opt_1" />' + questions[currQuestion - 1].opt_1 + '<br />' +
+                '<input type="radio" name="opt" id="opt_2" value="opt_2" />' + questions[currQuestion - 1].opt_2 + '<br />' +
+                '<input type="radio" name="opt" id="opt_3" value="opt_3" />' + questions[currQuestion - 1].opt_3 + '<br />' +
+                '<input type="radio" name="opt" id="opt_4" value="opt_4" />' + questions[currQuestion - 1].opt_4 + '<br />';
+            document.getElementById('options').innerHTML = opt;
+        }
+        displayData();
+    </script>
 </body>
